--- a/Homework09.ipynb
+++ b/Homework09.ipynb
@@ -97,7 +97,8 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: check and see what is inside the list here"
+    "# TODO: check and see what is inside the list here\n",
+    "train_files[:10]"
    ]
   },
   {
@@ -134,7 +135,9 @@
    "outputs": [],
    "source": [
     "# TODO: check if labels got extracted correctly by looking at \n",
-    "#       the first few items of the label list and the filename list"
+    "#       the first few items of the label list and the filename list\n",
+    "print(train_files[:5])\n",
+    "print(label_data[:5])"
    ]
   },
   {
@@ -178,9 +181,17 @@
    "outputs": [],
    "source": [
     "# TODO: run PCA, get DataFrame\n",
+    "pca = PCA(n_components=10)\n",
+    "cam_pca_df = pca.fit_transform(pixel_data)\n",
+    "\n",
     "# TODO: add \"label\" column\n",
+    "cam_pca_df[\"label\"] = label_data\n",
+    "\n",
     "# TODO: print variance\n",
-    "# TODO: take a look at the first 5 rows"
+    "print(pca.explained_variance())\n",
+    "\n",
+    "# TODO: take a look at the first 5 rows\n",
+    "display(cam_pca_df)"
    ]
   },
   {
@@ -231,8 +242,16 @@
    "outputs": [],
    "source": [
     "# TODO: reconstruct image at index 0\n",
+    "pca_pixels = pca.inverse_transform(cam_pca_df)\n",
+    "display(make_image(pixel_data[0], width=256))\n",
+    "display(make_image(pca_pixels.loc[0], width=256))\n",
     "\n",
-    "# TODO: reconstruct image at index 10"
+    "# TODO: reconstruct image at index 10\n",
+    "display(make_image(pixel_data[10], width=256))\n",
+    "display(make_image(pca_pixels.loc[10], width=256))\n",
+    "\n",
+    "display(make_image(pixel_data[15], width=256))\n",
+    "display(make_image(pca_pixels.loc[15], width=256))"
    ]
   },
   {
@@ -259,9 +278,17 @@
    "outputs": [],
    "source": [
     "# TODO: create a classifier\n",
+    "model = RandomForestClassifier()\n",
+    "\n",
     "# TODO: split input and output features\n",
+    "train_features = cam_pca_df.drop(columns=[\"label\"])\n",
+    "train_ids = cam_pca_df[\"label\"]\n",
+    "\n",
     "# TODO: fit the model\n",
-    "# TODO: run predictions"
+    "model.fit(train_features, train_ids)\n",
+    "\n",
+    "# TODO: run predictions\n",
+    "train_predictions = model.predict(train_features)"
    ]
   },
   {
@@ -333,9 +360,11 @@
    "outputs": [],
    "source": [
     "# TODO: create a list of files in the test/ directory\n",
-    "test_files = []\n",
+    "test_files = [f for f in listdir(\"./data/image/0801-500/test\") if f.endswith(\".jpg\")]\n",
     "\n",
-    "# TODO: check its length and content"
+    "# TODO: check its length and content\n",
+    "len(test_files)\n",
+    "print(test_files[:5])"
    ]
   },
   {
@@ -378,7 +407,8 @@
    "outputs": [],
    "source": [
     "# TODO: run PCA on test pixels, get DataFrame\n",
-    "#       this is the same PCA that was created above, not a new one"
+    "#       this is the same PCA that was created above, not a new one\n",
+    "test_cam_pca_df = pca.fit_transform(test_pixel_data)"
    ]
   },
   {
@@ -399,8 +429,12 @@
    "outputs": [],
    "source": [
     "# TODO: reconstruct one or two images\n",
+    "test_pca_pixels = pca.inverse_transform(test_cam_pca_df)\n",
+    "display(make_image(test_pixel_data[10], width=256))\n",
+    "display(make_image(test_pca_pixels.loc[10], width=256))\n",
     "\n",
-    "# TODO: take a look at the first 5 rows"
+    "# TODO: take a look at the first 5 rows\n",
+    "display(test_pca_pixels[:5])"
    ]
   },
   {
@@ -447,7 +481,10 @@
    "source": [
     "# TODO: run classifier. This is the same classifier already fitted on the train data above\n",
     "\n",
-    "# TODO: get accuracy"
+    "test_predictions = model.predict(test_cam_pca_df)\n",
+    "\n",
+    "# TODO: get accuracy\n",
+    "CamUtils.classification_accuracy(test_files, test_predictions)"
    ]
   },
   {
@@ -480,7 +517,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.9.17 ('hf-model')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -494,12 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "89e384cab7c47fb35ec95d2248b519cf922ee174880eed636c26cdfb6c4df768"
-   }
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
