answer all questions

--- a/Homework09.ipynb
+++ b/Homework09.ipynb
@@ -181,7 +181,7 @@
    "outputs": [],
    "source": [
     "# TODO: run PCA, get DataFrame\n",
-    "pca = PCA(n_components=10)\n",
+    "pca = PCA(n_components=35)\n",
     "cam_pca_df = pca.fit_transform(pixel_data)\n",
     "\n",
     "# TODO: add \"label\" column\n",
@@ -215,7 +215,11 @@
     ]
    },
    "source": [
-    "<span style=\"color:hotpink;\">EDIT THIS CELL WITH ANSWER</span>"
+    "<span style=\"color:lime;\">ANSWER:<br>\n",
+    "I decided to keep 35, because when I first try 10 as HW7, some image work well and some of them are to blur to tell anything, especially the image with people.<br>\n",
+    "I tried 10, 15, 20, 25, 30, 35, and 40 - above 35 I can see human face and 40 is the same.<br>\n",
+    "35 pixels got 95%\n",
+    "</span>"
    ]
   },
   {
@@ -337,7 +341,10 @@
     ]
    },
    "source": [
-    "<span style=\"color:hotpink;\">EDIT THIS CELL WITH ANSWER</span>"
+    "<span style=\"color:lime;\">ANSWER:<br>\n",
+    "It got 100% accuracy in train files, so it works and we can use in test files pretty well.<br>\n",
+    "However, we can't expect 100% the same result because it might be something different from we did in train files<br>\n",
+    "</span>"
    ]
   },
   {
@@ -430,8 +437,8 @@
    "source": [
     "# TODO: reconstruct one or two images\n",
     "test_pca_pixels = pca.inverse_transform(test_cam_pca_df)\n",
-    "display(make_image(test_pixel_data[10], width=256))\n",
-    "display(make_image(test_pca_pixels.loc[10], width=256))\n",
+    "display(make_image(test_pixel_data[30], width=256))\n",
+    "display(make_image(test_pca_pixels.loc[30], width=256))\n",
     "\n",
     "# TODO: take a look at the first 5 rows\n",
     "display(test_pca_pixels[:5])"
@@ -457,7 +464,9 @@
     ]
    },
    "source": [
-    "<span style=\"color:hotpink;\">EDIT THIS CELL WITH ANSWER</span>"
+    "<span style=\"color:lime;\">ANSWER:<br>\n",
+    "Because the pixels are different and we use only 30 pixels to reconstructed, so some of them might be lost and gave us noisy effect.\n",
+    "</span>"
    ]
   },
   {
@@ -507,7 +516,10 @@
     ]
    },
    "source": [
-    "<span style=\"color:hotpink;\">EDIT THIS CELL WITH ANSWER</span>"
+    "<span style=\"color:lime;\">ANSWER:<br>\n",
+    "It got 25% accuracy. It seems low and far from training data, but when I try to run on random image, the result is not bad and clear image.<br>\n",
+    "Maybe we can improve by adjust the number of component or other parameters in PCA. In HW7 use 10 features compare to this accuracy we got here.\n",
+    "</span>"
    ]
   }
  ],
